--- a/css/style.scss
+++ b/css/style.scss
@@ -625,7 +625,7 @@ footer {
   position: relative;
   bottom: unset;
   left: unset;
-  padding: 20px;
+  padding: 8px;
   display: flex;
   gap: 24px;
   align-items: center;
@@ -761,11 +761,8 @@ footer {
   align-items: center;
   justify-content: space-between;
   gap: 16px;
+  row-gap: 4px;
   margin-bottom: 16px;
-  @media screen and (max-width: 768px) {
-    flex-direction: column;
-    justify-content: center;
-  }
 }
 .sectionTitle {
   padding: 0 8px;
