--- a/css/style.scss
+++ b/css/style.scss
@@ -878,6 +878,31 @@ footer {
   border-radius: 16px;
   transition: var(--transition);
   border: 1px solid #e1e1e1;
+  .favorite {
+    position: absolute;
+    top: 16px;
+    left: 16px;
+    z-index: 2;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background-color: #0000004f;
+    backdrop-filter: blur(4px);
+    transition: var(--transition);
+    img {
+      width: 20px;
+      height: 20px;
+      transition: var(--transition);
+      filter: invert(1);
+    }
+    &:hover,
+    &.active {
+      background-color: red;
+    }
+  }
 
   .itemImg {
     position: relative;
