--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ a:hover {
 @media (max-width: 767px) {
   .container,
   .container-fluid {
-    padding: 0px 4px;
+    padding: 0px 8px;
   }
 }
 video,
@@ -803,6 +803,12 @@ footer .border-top {
   row-gap: 4px;
   margin-bottom: 24px;
 }
+@media screen and (max-width: 768px) {
+  .topHead {
+    flex-direction: column;
+    align-items: start;
+  }
+}
 
 .sectionTitle {
   padding: 0 8px;
@@ -828,7 +834,10 @@ footer .border-top {
 }
 @media screen and (max-width: 768px) {
   .sectionTitle .title {
-    font-size: 30px;
+    font-size: 24px;
+  }
+  .sectionTitle .title span {
+    display: block;
   }
 }
 
@@ -864,7 +873,7 @@ footer .border-top {
   color: var(--grayColor);
 }
 .categories .category .icon img {
-  width: 40px;
+  min-width: 40px;
   height: 40px;
   -o-object-fit: contain;
      object-fit: contain;
@@ -1108,7 +1117,7 @@ footer .border-top {
 }
 @media screen and (max-width: 768px) {
   .popular .container .topHead .sectionTitle .title {
-    font-size: 40px;
+    font-size: 30px;
   }
 }
 .popular .container .swiper {
