--- a/css/style.scss
+++ b/css/style.scss
@@ -82,7 +82,7 @@ a {
 @media (max-width: 767px) {
   .container,
   .container-fluid {
-    padding: 0px 4px;
+    padding: 0px 8px;
   }
 }
 video,
@@ -764,6 +764,10 @@ footer {
   gap: 16px;
   row-gap: 4px;
   margin-bottom: 24px;
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    align-items: start;
+  }
 }
 .sectionTitle {
   padding: 0 8px;
@@ -786,7 +790,10 @@ footer {
       font-size: unset;
     }
     @media screen and (max-width: 768px) {
-      font-size: 30px;
+      font-size: 24px;
+      span{
+        display: block;
+      }
     }
   }
 }
@@ -821,7 +828,7 @@ footer {
     }
     .icon {
       img {
-        width: 40px;
+        min-width: 40px;
         height: 40px;
         object-fit: contain;
       }
@@ -1070,7 +1077,7 @@ footer {
         .title {
           font-size: 60px;
           @media screen and (max-width: 768px) {
-            font-size: 40px;
+            font-size: 30px;
           }
         }
       }
